objects/EmailMessage.object
<CustomObject>
    <fields>
        <fullName>CRM_Mtg_Contact_Id__c</fullName>
        <label>Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Email_Previewed_and_Reviewed__c</fullName>
        <label>Email Previewed and Reviewed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Is_Manual_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Manual Response</label>
        <type>Checkbox</type>
    </fields>
    <validationRules>
        <fullName>CRM_Mtg_Check_Case_Ownership</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name = &apos;CRM Mortgage&apos;, 
OR(Parent.CRM_Mtg_Case_Record_Type__c = &apos;Mortgage Broker Scenario&apos;, Parent.CRM_Mtg_Case_Record_Type__c = &apos;Mortgage Broker Accreditation&apos;), 
NOT(ISPICKVAL($User.ScCollection_UserType__c,&apos;TL&apos;)), 
Parent.OwnerId &lt;&gt; $User.Id, 
NOT(Incoming),
CRM_Mtg_Is_Manual_Response__c)</errorConditionFormula>
        <errorMessage>Sorry! Assign the case to yourself to send an email.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_Mtg_Check_Email_Sending</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name = &apos;CRM Mortgage&apos;, 
OR(Parent.CRM_Mtg_Case_Record_Type__c = &apos;Mortgage Broker Scenario&apos;, Parent.CRM_Mtg_Case_Record_Type__c = &apos;Mortgage Broker Accreditation&apos;, Parent.CRM_Mtg_Case_Record_Type__c = &apos;Mortgage Broker Transfer&apos;), 
ISPICKVAL(Parent.Status,&apos;Closed&apos;), 
NOT(Incoming))</errorConditionFormula>
        <errorMessage>Sorry! You cannot send email from a closed case, please reopen the case.</errorMessage>
    </validationRules>
</CustomObject>